[metadata]
name = asymmetree
version = 2.2.1
author = David Schaller
author_email = sdavid@bioinf.uni-leipzig.de
description = Simulation of phylogenetic trees, sequences and genomes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/david-schaller/AsymmeTree
project_urls =
    Bug Tracker = https://github.com/david-schaller/AsymmeTree/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    matplotlib
    networkx
    tralda

[options.packages.find]
where = src
